--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 </head>
 
-<body class="bg-dark">
+<body class="bg-light">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#">Navbar</a>
     <button class="navbar-toggler" type="button">
@@ -16,14 +16,18 @@
 
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-item nav-link active" href="#">Task Lisk <span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="#">Loan Calculator</a>
-        <a class="nav-item nav-link" href="#">Temperature Converter</a>
+        <a class="nav-item nav-link active" href="#">Link #1 <span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link" href="#">Link #2</a>
+        <a class="nav-item nav-link" href="#">Link #3</a>
       </div>
     </div>
   </nav>
   
   <div class="container">
+    <h1 class="text-center p-5">Boring Bootstrap Template</h1>
+    <div>
+      <img class="col d-flex align-items-center justify-content-center" src="img/dog_picture.jpg" alt="">
+    </div>
   </div>
 </body>
 
